move all source in another package in com.batyaev.vk.api

--- a/vk_sdk/build.gradle
+++ b/vk_sdk/build.gradle
@@ -1,3 +1,31 @@
+import java.sql.Wrapper
+
 apply plugin: 'java'
-apply plugin: 'war'
 apply plugin: 'idea'
+
+//def mainClassName = "com.batyaev.vk.VKApi"
+//
+//jar {
+//    manifest.attributes("Main-Class": mainClassName);
+//}
+
+//compile {
+//    source = 'src'
+//}
+sourceSets {
+    main {
+        java {
+            srcDir 'src'
+        }
+    }
+}
+//sourceSets {
+//    main {
+//        java {
+//            srcDir 'src'
+//        }
+//        resources {
+//            srcDir 'resources'
+//        }
+//    }
+//}
