--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,16 @@ buildscript {
 }
 
 allprojects {
-    group = 'com.vk'
-    version = '1.3.9'
+    group = 'com.batyaev.vk'
+    version = '0.1.1'
 
     repositories {
         mavenCentral()
     }
+}
+
+subprojects {
+    apply plugin: 'java'
+    apply plugin: 'idea'
+    apply plugin: 'application'
 }
