--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,13 @@ hs_err_pid*
 
 .gradle*
 .idea*
+
+
+# OS generated files #
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
