--- a/vk_sdk/build.gradle
+++ b/vk_sdk/build.gradle
@@ -20,7 +20,10 @@ sourceSets {
 }
 
 def httpClientVersion = '4.4.1'
+def log4jVersion = '2.2'
 
 dependencies {
     compile "org.apache.httpcomponents:httpclient:$httpClientVersion"
+    compile "org.apache.logging.log4j:log4j-api:$log4jVersion"
+    compile "org.apache.logging.log4j:log4j-core:$log4jVersion"
 }
