--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 buildscript {
     repositories {
+        mavenLocal()
         mavenCentral()
     }
 }
@@ -9,12 +10,22 @@ allprojects {
     version = '0.1.1'
 
     repositories {
+        mavenLocal()
         mavenCentral()
     }
+
+    apply plugin: 'java'
+    apply plugin: 'idea'
 }
 
 subprojects {
-    apply plugin: 'java'
-    apply plugin: 'idea'
     apply plugin: 'application'
+}
+
+idea {
+    project {
+        jdkName = '1.8'
+        languageLevel = '1.8'
+        vcs = 'Git'
+    }
 }
