--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,7 @@
-*.class
-
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
 # Package Files #
-*.jar
 *.war
 *.ear
 
@@ -24,3 +21,6 @@ hs_err_pid*
 ehthumbs.db
 Thumbs.db
 build
+*.iml
+*.ipr
+*.iws
