refactoring + add new test app

--- a/message_loader/build.gradle
+++ b/message_loader/build.gradle
@@ -23,7 +23,7 @@ test {
     }
 }
 
-mainClassName = "TestApp"
+mainClassName = "MessageLoader"
 
 jar {
     manifest.attributes("Main-Class": mainClassName);
