--- a/demos/build.gradle
+++ b/demos/build.gradle
@@ -23,7 +23,7 @@ test {
     }
 }
 
-mainClassName = "TestApp"
+mainClassName = "Main"
 
 jar {
     manifest.attributes("Main-Class": mainClassName);
