create first test

--- a/vk_sdk/build.gradle
+++ b/vk_sdk/build.gradle
@@ -39,6 +39,11 @@ sourceSets {
             srcDir 'resources'
         }
     }
+    test {
+        java {
+            srcDir 'tests'
+        }
+    }
 }
 
 def httpClientVersion = '4.5'
